@@ -759,7 +759,7 @@ input:focus, textarea:focus, select:focus {
 	float: right;
 }
 
-.g-config h1 {
+.g-config h1, .g-content-popup h1 {
 	font-size: 15px;
 	font-weight: bold;
  	color: #c64934;
