@@ -1,3 +1,9 @@
+2006-07-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j76-UNSTABLE
+
+ * Fix: Moved colorpicker.php into popus and adjust showColorpicker()
+
+ * Wording fixes.
+
 2006-07-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j75-UNSTABLE
 
  ***** CHANGE *****
